// complaints-nest database schema
// Paste this at dbdiagram.io

Table citizens {
  id              int       [pk, increment]
  first_name      varchar   [not null]
  last_name       varchar   [not null]
  email           varchar   [not null]
  phone           varchar   [not null]
  address         varchar   [not null]
  national_number varchar   [unique, not null, note: 'business key — citizens identified/deduplicated by this']
  created_at      timestamp [not null, default: `now()`]
  updated_at      timestamp [not null, default: `now()`]
}

Table request_categories {
  id          int           [pk, increment]
  name        varchar       [unique, not null]
  arabic_name varchar       [null]
  description text          [null]
  is_active   boolean       [not null, default: true]
  created_at  timestamp     [not null, default: `now()`]
  updated_at  timestamp     [not null, default: `now()`]
}

Table requests {
  id                      int            [pk, increment]
  citizen_national_number varchar        [not null, ref: > citizens.national_number, note: 'relation by national number']
  category_id             int            [not null, ref: > request_categories.id]
  type                    request_type   [not null, default: 'complaint']
  description             text           [not null]
  status                  request_status [not null, default: 'pending']
  assigned_to_user_id     int            [null, note: 'IAM staff user id — no FK, resolved via API']
  response                text           [null]
  created_at              timestamp      [not null, default: `now()`]
  updated_at              timestamp      [not null, default: `now()`]
}

Enum request_type {
  request
  complaint
}

Enum request_status {
  pending
  in_progress
  resolved
  closed
}
